--- a/app/views/reviews/_list.html.erb
+++ b/app/views/reviews/_list.html.erb
@@ -2,10 +2,12 @@
 	<thead>
 		<tr>
 			<th>ID</th>
-			<th>ISBN</th>
+			<th>BOOK ID</th>
+			<th>TITLE</th>
 			<th>REVIEW TEXT</th>
-			<th>USER</th>
+			<th>PLATFORM</th>
 			<th>STAR RATING</th>
+			
 		</tr>
 	</thead>
 	<% @reviews.each do |review| %>
@@ -14,7 +16,9 @@
 	    <td><%= review.isbn %></td>
 	    <td><%= review.title %></td> 
 	    <td><%= review.review_text %></td>
+	    <td><%= review.platform %></td>
 	    <td><%= review.star_rating %></td>
+
 
 	</tbody>
 	<% end %>
