--- a/app/views/reviews/_quickDash.html.erb
+++ b/app/views/reviews/_quickDash.html.erb
@@ -1,4 +1,9 @@
-   <div id="quickDash">
+   
 
-QUICK DASH 
-    </div>
+   <div class="container" id="quickDash">
+		<div class="row">
+		  <div class="col-md-4 quick_box">Word Clouds</div>
+		  <div class="col-md-4 quick_box">Thematic Analysis</div>
+		  <div class="col-md-4 quick_box">Goodreads Shelves</div>
+		</div>
+   </div>  
