--- a/app/views/reviews/welcome.html.erb
+++ b/app/views/reviews/welcome.html.erb
@@ -1,12 +1,16 @@
-<div class="welcomeBox">
-	<h1>Willkommen. Aloha. Bonjour. Sup. </h1>
-	<h2>Soon you'll be scraping reader reviews from Goodreads and Amazon like a pro and performing all kinds of funky analysis, like these:</h2>
-	<ul>
-		<li><h4>Schweet Word Clouds</h4></li>
-		<li><h4>Mindblowing keyword extraction</h4></li>
-		<li><h4>Slam-dunkering user shelves roll-ups</h4></li>
-	</ul>
-	<h2>To begin, search for a title , by author, keyword, or isbn above.</h2>
- </div>
+<div id="wrapper">
+	<div id="page-content-wrapper">
+		<div class="welcomeBox">
+			<h1>Willkommen. Aloha. Bonjour. Sup. </h1>
+			<h2>Soon you'll be scraping reader reviews from Goodreads and Amazon like a pro and performing all kinds of funky analysis, like these:</h2>
+			<ul>
+				<li><h4>Schweet Word Clouds</h4></li>
+				<li><h4>Mindblowing keyword extraction</h4></li>
+				<li><h4>Slam-dunkering user shelves roll-ups</h4></li>
+			</ul>
+			<h2>To begin, search for a title , by author, keyword, or isbn above.</h2>
+		 </div>
 
- <i class="fa fa-arrow-up fa-3x fa-rotate-90 blink_me fa-inverse"></i>
+		 <i class="fa fa-arrow-up fa-3x fa-rotate-90 blink_me fa-inverse"></i>
+	</div>
+</div>
