--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,39 @@
 	 </div>
 <div class="mainContainer">
 
-
+ <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+<!--               <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"></a> -->
+              <div class="chosenTitle">
+                      <div class="bookCover">
+                          <img id="chosen_cover" src="<%=@img%>">
+                      </div>
+                      <div class="bookDescription">
+                            <p style="font-weight:bold"><%=@title%></p>
+                            <p><%=@author%></p>
+                      </div>
+              </div>
+              <div style="border: 1px solid #e9e9e9; line-height: initial;"> 
+                <div class="findISBN">
+                   <%= form_tag "/search", method: "GET" do |f| %>
+                    <%= text_field_tag(:search, params[:search], :placeholder => 'Search for a book') %>
+                    <%= submit_tag("Search") %>
+                    <% end %>
+                </div>
+              </div>
+                      <!-- Nav tabs -->
+              <div role="tabpanel" style="border-bottom: 1px solid #e9e9e9; line-height: initial;">
+                <ul id="myTab" style="list-style-type:none; padding:0px" role="tablist">
+                    <li role="presentation" class="active"><a id="reviewsTab" href="#reviews" aria-controls="reviewsTab" role="tab" data-toggle="tab">Summary</a></li>
+                    <li role="presentation"><a id="wordCloudTab" href="#wordCloudPanel" aria-controls="wordCloudTab" role="tab" data-toggle="tab">Word Clouds</a></li>
+                    <li role="presentation"><a id="themesTab" href="#themes" aria-controls="themesTab" role="tab" data-toggle="tab">Thematic Analysis</a></li>
+                    <li role="presentation"><a id="shelvesTab" href="#shelves" aria-controls="shelvesTab" role="tab" data-toggle="tab">Goodreads Shelves</a></li>
+                </ul>
+              </div>
+          </ul>
+        </div>
+<!-- /#sidebar-wrapper -->
 
 <%= yield %>
 
