--- a/app/views/reviews/_quickDash.html.erb
+++ b/app/views/reviews/_quickDash.html.erb
@@ -1,9 +1,22 @@
    
 
-   <div class="container" id="quickDash">
-		<div class="row">
-		  <div class="col-md-4 quick_box">Word Clouds</div>
-		  <div class="col-md-4 quick_box">Thematic Analysis</div>
-		  <div class="col-md-4 quick_box">Goodreads Shelves</div>
+<!--    <div class="container" id="quickDash">
+		<div class="row" style="margin-bottom: 30px">
+		  <div class="col-md-4 quick_box">
+		  	<h4>Word Clouds</h4>
+		  	<a href="#wordCloudTab">
+		  		<img class="demo_img" src="/assets/cloud.png">
+		  	</a>
+		  </div>
+		  <div class="col-md-4 quick_box">
+		  	<h4>Thematic Analysis</h4>
+		  	<img class="demo_img" src="/assets/themes.png">
+		  </div>
+
+		  <div class="col-md-4 quick_box">
+		  	<h4>Goodreads Shelves</h4>
+		  	<img class="demo_img" src="/assets/shelves.png">
+		  </div>
 		</div>
    </div>  
+ -->
