--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -71,12 +70,16 @@
                 </div>
               </div>
                       <!-- Nav tabs -->
-              <div role="tabpanel" style="border-bottom: 1px solid #e9e9e9; line-height: initial;">
+              <div role="tabpanel" >
                 <ul id="myTab" style="list-style-type:none; padding:0px" role="tablist">
+                       <!-- Widgets tabs-->
                     <li role="presentation" class="active"><a id="reviewsTab" href="#reviews" aria-controls="reviewsTab" role="tab" data-toggle="tab">Summary</a></li>
                     <li role="presentation"><a id="wordCloudTab" href="#wordCloudPanel" aria-controls="wordCloudTab" role="tab" data-toggle="tab">Word Clouds</a></li>
                     <li role="presentation"><a id="themesTab" href="#themes" aria-controls="themesTab" role="tab" data-toggle="tab">Thematic Analysis</a></li>
-                    <li role="presentation"><a id="shelvesTab" href="#shelves" aria-controls="shelvesTab" role="tab" data-toggle="tab">Goodreads Shelves</a></li>
+                    <li style="border-bottom: 1px solid #e9e9e9;" role="presentation"><a id="shelvesTab" href="#shelves" aria-controls="shelvesTab" role="tab" data-toggle="tab">Goodreads Shelves</a></li>
+                        <!-- User lists, recents tabs-->
+                    <li role="presentation"><a id="recent_titles_tab" href="#recent_titles" aria-controls="recent_titles_tab" role="tab" data-toggle="tab">Recent Titles</a></li>
+                    <li role="presentation"><a id="my_lists_tab" href="#my_lists" aria-controls="my_lists_tab" role="tab" data-toggle="tab">My Lists</a></li>
                 </ul>
               </div>
           </ul>
