--- a/app/views/reviews/_results.html.erb
+++ b/app/views/reviews/_results.html.erb
@@ -1,11 +1,14 @@
 
 <div id="wrapper">
-	<div id="page-content-wrapper">
-		<%@json["GoodreadsResponse"]["search"]["results_end"].to_i.times do |number| %>
-					<div class="single_result">
-						<div class="cover_result">
-							<img src="<%=@returned_books[number]["best_book"]["image_url"]%>">
-						</div>
+	<h1>For multiple books, check selected book and click here</h1>
+<!-- 	<form action="demo_form.asp" method="post"> -->
+		<input type="submit" value="Submit">
+		<div id="page-content-wrapper">
+			<%@json["GoodreadsResponse"]["search"]["results_end"].to_i.times do |number| %>
+				<div class="single_result">
+					<div class="cover_result">
+						<img src="<%=@returned_books[number]["best_book"]["image_url"]%>">
+					</div>
 					<div class="description_result">
 						<p>
 							<strong>Title: </strong><%="#{@returned_books[number]["best_book"]["title"]}" %> |  
@@ -13,21 +16,22 @@
 						</p>
 						<p>
 							<strong>Reviews: </strong><%="#{@returned_books[number]["text_reviews_count"]}" %> | 
-							<strong>Avg. Rating: </strong><%="#{@returned_books[number]["average_rating"]}" %> | 	
+							<strong>Avg. Rating: </strong><%="#{@returned_books[number]["average_rating"]}" %> |
 							<% @pub_date = "#{@returned_books[number]["original_publication_day"]}/#{@returned_books[number]["original_publication_month"]}/#{@returned_books[number]["original_publication_year"]}" %>
 							<strong>Publication Year: </strong><%=@pub_date%>
-
 								<p>
-						<%= button_to "Get Reviews", reviews_path, :method => "post", :params => {
+						<%= button_to "Get Reviews for this TItle", reviews_path, :method => "post", :params => {
 								:choice => "#{@returned_books[number]["best_book"]["id"]}",
 								:img => "#{@returned_books[number]["best_book"]["image_url"]}",
 								:title =>"#{@returned_books[number]["best_book"]["title"]}" ,
 								:author => "#{@returned_books[number]["best_book"]["author"]["name"]}",
 								:date => "#{@pub_date}"}
 							%> 	
-								</p>
+						<input type="checkbox" name="vehicle" value="Bike">Add to list </input>
+							</p>
 					</div>
-					</div>
-		<%end%>
-	</div>
+				</div>
+			<%end%>
+		</div>
+	</form>
 </div>
